--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,48 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-color: seashell;
 }
+
+.main-container {
+  border: 2px solid aquamarine;
+  display: flex;
+  flex-direction: row-reverse;
+  
+}
+
+.container {
+  background-image: url "./images/frame.png";
+  background-repeat: no-repeat;
+  border: 2px solid red;
+  display: flex;
+  flex-direction: column;
+}
+
+.badges {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+/* .instagram {
+  width: 20%;
+} */
+
+.main-container, .footer {
+  max-width: 750px;
+  margin: auto;
+}
+
+/* .phone {
+  width: 70px;
+} */
+
+.list {
+  list-style-type: none;
+  border: 2px solid aquamarine;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
