--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,112 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-*/
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+.box {
+  width: 100%;
+  height: 350px;
+  background-color: #1c5380; 
+}
+.container-principal {
+  position: fixed;
+  width: 1020px;
+  height: 620px;
+  margin-top: -300px;
+  margin-left: 200px;
+}
+.phone {
+  position: relative;
+  margin-left: 50px;
+  margin-top: 70px;
+}
+.brand {
+  position: relative;
+  margin-left: 80px;
+  margin-bottom: 420px;
+}
+.box-home {
+  position:relative;
+  width: 100px;
+  height: 40px;
+  margin-top: -485px;
+  margin-left: 845px;
+  border-radius: 4px;
+  border: 1px black;
+  background: linear-gradient(to top, #1c5380, #83aaca);
+  border-bottom: 1px solid #1c5380;
+}
+.home {
+  width: 20px;
+  height: 20px;
+  padding-left: 10px;
+  padding-top: 10px;
+}
+.login {
+  margin-left: 45px;
+  margin-top: -23px;
+  color: white;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+}
+.frame {
+  position: relative;
+  margin-left: 450px;
+  margin-top: 40px;
+}
+.title{
+  position:relative;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:#1c5380;
+  font-style: bold;
+  margin-left: 500px;
+  margin-top: -250px;
+  font-size: 20px;
+}
+.text {
+  position:relative;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: rgb(77, 77, 77);
+  margin-left: 500px;
+  margin-top: 25px;
+  font-size: 14px;
+}
+.text2 {
+  position:relative;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: rgb(77, 77, 77);
+  margin-left: 500px;
+  margin-top: 25px;
+  font-size: 14px;
+}
+.text3 {
+  position:relative;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: rgb(77, 77, 77);
+  margin-left: 500px;
+  margin-top: 25px;
+  font-size: 14px;
+}
+.ios {
+  position: absolute;
+  margin-left: 500px;
+  margin-top: 45px;
+}
+.android {
+  position: absolute;
+  margin-left: 680px;
+  margin-top: 45px;
+}
+.menu-1 {  
+  position:relative;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: #1c5380;
+  margin-top: 150px;
+  margin-left: 250px;
+  text-transform: uppercase;
+  font-size: 12px;
+}
+.menu-2 {  
+  position:relative;
+  font: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color: rgb(77, 77, 77);
+  margin-left: 685px;
+  margin-top: -26px;
+  text-transform: uppercase;
+  font-size: 12px;
 }
