--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,35 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.header{
+  display: flex;
+  height: 250px;
+  background-color: #1c5380 ;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+
+#cel-phone{
+  margin-top: 500px;
+}
+
+#logotipo{
+  margin-top: 100px;
+}
+
+#button-login{
+  margin-top: 90px;
+
 }
