--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,20 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-size: 1600px;
 }
+
+section{
+  width: 100%;
+  height: 10rem;
+  background-image:-webkit-linear-gradient(bottom, white 50%, #06365f 30%);
+}
+   
