--- a/styles/style.css
+++ b/styles/style.css
@@ -2,38 +2,68 @@
 Colors to use:
 dark blue: #06365f
 light blue: #1c5380
-*/
+
 
 * {
   border: 1px solid red
 }
 
+*/
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
   background-color: white;
-  background-image: url("/images/bgtile.png");
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 #background-text {
   background-image: url("/images/frame.png");
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: contain;
   width: 30vw;
   padding: 30px;
+  margin-left:60px;
+  color:#06365f;
+}
+
+#brand-home {
+  margin-left: 65px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 section {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center;  
+  position: absolute;
+  margin-left: 450px;
   margin-top: 170px;
 } 
+
+span {
+  display: flex;
+}
+
+#bgtile {
+  background-image: url("/images/bgtile.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100vw;
+  height: 40vh;
+}
 
 footer {
   display: flex;
   justify-content: center;
   color:#1c5380;
+  margin-top: 400px;
+}
+
+#android-logo {
+  margin-left:18px;
+}
+
+p {
+  color:black;
 }
