--- a/styles/style.css
+++ b/styles/style.css
@@ -1,14 +1,3 @@
-/*
-Colors to use:
-dark blue: #06365f
-light blue: #1c5380
-
-
-* {
-  border: 1px solid red
-}
-
-*/
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
@@ -37,20 +26,26 @@ section {
   align-items: center;
   justify-content: center;  
   position: absolute;
-  margin-left: 450px;
-  margin-top: 170px;
+  margin-left: 21vw;  /*modificado*/
+  margin-top: 16vh;   /*modificado*/
 } 
 
-span {
+button {
   display: flex;
+  align-items: center;
+  /* padding: 1vw; */
+  justify-content: space-between;
+  background-color: #1c5380;
+  border-left: none;
+  color: white;
 }
 
 #bgtile {
   background-image: url("/images/bgtile.png");
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100vw;
-  height: 40vh;
+  width: 100vw; /*modificado*/
+  height: 40vh;  /*modificado*/
 }
 
 footer {
@@ -60,6 +55,14 @@ footer {
   margin-top: 400px;
 }
 
+footer > ul > a {
+  text-decoration-line: none;
+  color: #1c5380;
+  font-weight: bold;
+  padding: 0.5vw;
+} /*modificado*/
+
+
 #android-logo {
   margin-left:18px;
 }
@@ -67,3 +70,4 @@ footer {
 p {
   color:black;
 }
+
