--- a/styles/style.css
+++ b/styles/style.css
@@ -7,14 +7,12 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
-  /* background-color: #1c5380; */
 }
 
 .blue-body {
   background-color: #1c5380;
   width: 100vw;
   height: 45vh;
-  /* padding: 100px; */
 }
 
 .hero {
@@ -26,44 +24,104 @@ body {
   padding: 0 300px;
 }
 
+.hero > img[src="./images/phones.png"] {
+  padding-left: 80px;
+}
+
 .main {
   width: 300px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* align-items: ; */
   align-content: space-between;
   margin: 0 200px 0 0;
 }
 
-.log-div{
-  width: 300px;
+.log-div {
+  width: 495px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-content: center;
-  
 }
 
-.home-btn{
-  height: 30px;
-  width: auto;
-}
-
-.frame-container{
+.frame-container {
   width: 500px;
   height: 300px;
   background-image: url(../images/frame.png);
   background-repeat: no-repeat;
-  background-position:top;
-  text-align: center;
+  background-position: top;
+  text-align: left;
 }
 
 h2 {
   color: #06365f;
+  padding-left: 35px;
 }
 
-.stores-badge{
+.frame-container > div {
+  padding-left: 35px;
+}
+
+.stores-badge {
   display: flex;
-  
+}
+
+.btn {
+  display: flex;
+  background-color: #2c6390;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-top: 15px;
+  height: 40px;
+  width: 95px;
+  padding-top: 7px;
+  border-radius: 5px;
+  border-color: #2c6390;
+}
+
+.btn > span {
+  padding-top: 5px;
+  padding-left: 5px;
+  font-size: 15px;
+  color: #deefeb;
+}
+
+.downloads {
+  display: flex;
+  flex-direction: row;
+  padding-left: 35px;
+  padding-top: 50px;
+}
+
+.downloads > a[href="app-store.html"] {
+  margin-right: 20px;
+}
+
+footer {
+  padding-bottom: 60px;
+}
+
+footer > div {
+  width: 550px;
+  margin-left: 443px;
+  display: flex;
+  justify-content: space-between;
+}
+
+footer > div > a {
+  font-size: 10px;
+  text-decoration: none;
+  font-weight: 600;
+  color: #4b779b;
+}
+
+footer > div > span {
+  font-size: 10px;
+  color: rgba(2, 7, 10, 0.5);
+}
+
+.instagram-image {
+  display: flex;
+  justify-content: flex-start;
 }
