--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,8 @@ body {
 .background{
   width: 100%;
   height: 50rem;
-  background-image:-webkit-linear-gradient(bottom, white 57%, #1c5380 30%);
+  background-image: url(../images/bgtile.png);
+  background-repeat: repeat-x;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -64,7 +65,9 @@ body {
   }
   
   .badge{
-    padding-left: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
   }
   .instalog{
     display: flex;
