--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,107 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
-body {
-  font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+.header {
+  background-color: #1c5380;
+  width: 100%;
+  height: 300px;
+}
+
+.intro {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  margin: -200px;
+  padding: 0 300px;
+}
+
+
+.intro-items {
+  width: 300px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: space-between;
+  margin-right: 200px;
+}
+
+.login {
+  width: 490px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.message {
+  background-image: url(../images/frame.png);
+  width: 500px;
+  height: 300px;
+  background-repeat: no-repeat;
+  background-position: top;
+  text-align: left;
+}
+
+.message p {
+  margin-left: 20px;
+  margin-right: 20px;
+  line-height: 30px;
+}
+
+h2 {
+  line-height: 30px;
+  color: #06365f;
+  padding-left: 35px;
+}
+
+.click {
+  display: flex;
+  background-color: #2c6390;
+  flex-direction: row;
+  justify-content: flex-end;
+  margin-top: 15px;
+  height: 40px;
+  width: 95px;
+  padding-top: 7px;
+  border-color: #2c6390;
+}
+
+.click span {
+  padding: 5px;
+  font-size: 13px;
+  color: white;
+}
+
+.icons {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 30px;
+  margin-right: 20px;
+  padding-top: 40px;
+}
+
+.icon1 {
+  margin-left: 20px;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color:#1c5380;
+  font-weight: 600;
+  font-size: 15px;
+  margin-left: 400px;
+  margin-right: 400px;
+  margin-bottom: 40px;
+  }
+
+  footer a {
+    text-decoration: none;
+  }
+
+.gray {
+  color: gray;
 }
