--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,87 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+}
+
+#wrap-around {
+  display: flex;
+  flex: 1;
+}
+
+#container-left {
+  margin-top: 50px;
+  display: flex;
+  flex: 1;
+}
+
+#container-right {
+  margin-top: 60px;
+  display: flex;
+  flex:1;
+  width: auto;
+}
+
+.button-one {
+  background:#1c5380;
+  color: white;
+
+}
+
+.text {
+  background-image: url("../images/frame.png");
+  height: 250px;
+}
+
+h1 {
+  padding: 20px;
+  color: #06365f;
+}
+
+p {
+  padding: 20px;
+}
+
+#app-store {
+  padding-left: 40px;
+}
+
+.app-store {
+  padding-left: 40px;
+}
+.app-store img {
+  width: 30%;
+  height: 34px;
+}
+
+.button-one {
+  background-image: linear-gradient(white, #1c5380);
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  display: flex;
+  justify-content: space-evenly;
+  
+}
+
+li {
+  list-style-type: none;
+  display: inline;
+  font-weight: bold;
+  font-size: 13px;
+  color: #DDDDDD;
+  padding: 5px;
+  
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 13px;
+  color: #1c5380;
 }
