--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,95 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
+* {
+  box-sizing: border-box;
+}
 
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
-  margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-attachment: fixed;
+  background-position: 0px 0px; 
+  background-size: 0.1vmax;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  margin-top: 10%;
 }
+
+.iphone {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#container {
+  display: flex;
+  width: 60%;
+}
+
+#content-box {
+  flex-direction: column;
+  margin: 0px 50px;
+  border: none;
+}
+
+#top-banner {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+button {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
+  background-color: #4d7ca5;
+  padding: 10px;
+  width: 100px;
+  border: none;
+  border-radius: 5px;
+  box-shadow: 5px 4px 11px 4px rgba(0,0,0,0.3);
+}
+
+#content {
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  border-radius: 30px;
+  border: none;
+  padding: 50px;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between; 
+  width: 700px;
+}
+
+li {
+  font-weight: 500;
+  text-transform: uppercase;
+  list-style: none;
+  font-size: 0.8em;
+}
+
+a {
+  text-decoration: none;
+  color: #50789B;
+}
+
+h1 {
+  font-size: 2em;
+  color: #063057;
+  line-height: 1.1em;
+}
+
+p {
+  font-weight: 300;
+} 
