--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,122 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+* {
+  box-sizing: border-box;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  /* background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100vh;
+  width: 100vw;
+}
+
+#background {
+  position: absolute;
+  display: flex;
+  z-index: -1;
+  height: 100vh;
+  width: 100vw;
+  background-image: url('../images/bgtile.png');
+  background-repeat: repeat-x;
+  background-position: top;
+}
+
+#main-container {
+  margin: 65px 0;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 50px;
+  max-width: 900px;
+}
+
+#phones {
+  flex: 2;
+}
+
+#main-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  width: 600px;
+  flex: 3;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 20px 10px;
+  flex: 1;
+}
+
+#login-button {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  padding: 10px 15px;
+  border-radius: 3px;
+  color: #DDDDDD;
+  font-weight: bold;
+  background: linear-gradient(hsl(207, 36%, 52%), hsl(207, 38%, 42%));
+  box-shadow: 0 0 2px black;
+}
+
+a {
+  text-decoration: none;
+}
+
+article {
+  display: flex;
+  flex-direction: column;
+  padding: 25px 55px;
+  background-image: url(../images/frame.png);
+  background-repeat: no-repeat;
+  background-size: contain;
+  font-size: 15px;
+  flex: 4;
+  font-weight: normal;
+}
+
+article h2 {
+  margin-bottom: 5px;
+  color: #06365f;
+}
+
+#download {
+  margin-top: 20px;
+  display: flex;
+  gap: 20px;
+}
+
+footer {
+  margin: 0 0 20px 0;
+  display: flex;
+  align-items: center;
+  gap: 40px;
+  font-size: 0.7rem;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+#footer-nav {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+}
+
+#footer-nav a {
+  color: #1c5380;
+}
+
+#copyright {
+  color: #AAAAAA
 }
