--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,77 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+header {
+  height: 250px;
+  width: 100%;
+  background: url(/lab-css-instagram-clone/images/bgtile.png);
+  position: absolute;
+  z-index: -1;
+}
+
+.gray-bg {
+  position: absolute;
+  height: 250px;
+  width: 100%;
+  height: 75%;
+  top: 250px;
+  background-color: rgb(217,225,233);
+  z-index: -1;
+}
+
 body {
+  position: relative;
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+}
+
+.body {
+  display: flex;
+  flex-direction: row;
+}
+
+main {
+  padding: 100px 30px 50px;
+}
+
+.container {
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-around;
+}
+
+.white-bg {
+  background-color: white;
+  border-radius: 8px;
+}
+
+h1{
+  color: rgb(58,104,144);
+  font-size: 20px;
+}
+
+.list-links {
+    width: 80%;
+    margin: 0 auto;
+}
+
+.list-links ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: darkblue
+}
+
+#copyright {
+  color: gray
 }
