--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,32 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+header {
+  background: rgb(6, 54, 95);
+  background: linear-gradient(
+    0deg,
+    rgba(6, 54, 95, 1) 0%,
+    rgba(28, 83, 128, 1) 100%
+  );
+}
+
+.flex-container {
+  display: flex;
+  width: 720px;
+}
+
+main {
+  background-image: url("./images/frame.png");
+}
+
+footer ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
 }
