--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,92 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+@import url("https://fonts.googleapis.com/css?family=Poppins");
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-repeat: repeat-x;
+  background-color: white;
+}
+
+#container {
+  margin-top: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  justify-content: center;
+}
+#instagram {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  width: 500px;
+}
+#instagram a {
+  text-align: center;
+  text-decoration: none;
+  float: right;
+  border: 1px solid #06365f;
+  border-radius: 5px;
+  width: 100px;
+  height: 30px;
+  color: white;
+  background-image: linear-gradient(#6396c0, #2b5b85);
+}
+#instagram a img {
+  padding-top: 5px;
+  width: 20px;
+}
+#container > div {
+  width: 360px;
+}
+#right-section {
+  padding: 20px 0px 0px 0px;
+  width: 500px;
+}
+#right-section article {
+  background: url("../images/frame.png") no-repeat transparent;
+  width: 500px;
+}
+h1 {
+  padding: 35px 35px 0px 35px;
+  width: 270px;
+  color: #06365f;
+  font-size: 1.2em;
+}
+#right-section p {
+  padding: 0px 35px 0px 35px;
+  font-size: 0.8em;
+}
+#buttons {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+#buttons img {
+  padding: 35px 0px 0px 35px;
+}
+footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin: 50px 0px 0px 100px;
+}
+footer a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #1c5380;
+  font-weight: bold;
+  font-size: 0.7em;
+  padding-left: 10px;
+}
+
+footer b {
+  text-transform: uppercase;
+  color: lightgray;
+  font-weight: bold;
+  font-size: 0.7em;
+  padding-left: 10px;
 }
