--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,116 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background: url("../images/bgtile.png") repeat-x center top scroll transparent;
+}
+
+a {
+  color: #1c5380;
+  text-decoration: none;
+  transition: all .2s ease-in-out;
+}
+
+a:hover,
+a:focus,
+a:active {
+  color: #06365f;
+}
+
+ul, ol {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.centered {
+  display: flex;
+  height: 100%;
+  align-content: center;
+  flex-direction: column;
+  justify-content: center;
+  flex-grow: 1;
+  min-height: 100vh;
+}
+
+.container {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-direction: row;
+  align-items: center;
+  max-width: 1200px;
+  margin: auto;
+  width: 100%;
+}
+
+.intro-section {
+  display: block;
+  padding: 30px;
+  max-width: 504px;
+}
+
+.intro-section .intro-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
+.intro-section .intro-header .home {
+  float: left;
+  margin-right: 5px;
+}
+
+.intro-section .intro-header .login a {
+  color: #FFFFFF;
+  font-weight: 700;
+}
+
+.intro-section .intro-bg {
+  position: absolute;
+}
+
+.intro-section .intro-inner {
+  position: relative;
+  padding: 25px;
+}
+
+.button {
+  background: rgb(6,54,95);
+  background: linear-gradient(0deg, rgba(6,54,95,1) 0%, rgba(28,83,128,1) 100%);
+  box-shadow: 0 0 3px #06365f;
+  padding: 5px 10px;
+}
+
+.subtitle {
+  color: #06365f;
+  font-weight: 700;
+  margin-top: 0;
+  line-height: normal;
+  font-size: 2rem;
+}
+
+.download-links {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.download-links .download-iphone,
+.download-links .download-android {
+  margin: 10px;
+}
+
+.footer-menu {
+  display: flex;
+  justify-content: space-evenly;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.footer-menu .menu-item {
+  margin: 0 15px;
+}
+
+.footer-menu .copyright {
+  opacity: 0.5;
 }
