--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,88 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+.zindex {
+  z-index: 1;
+  width: 80%;
+}
+
+#mainholder{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    /*this fixed centering*/
+    margin: auto;
+}
+
+
+.container {
+  display: flex;
+  justify-content: center;
+}
+
+.column {
+  flex-direction: column;
+  width: 80%;
+  padding-left: 5%;
+}
+
+.column-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+
+h1 {
+  color:  #1c5380;
+}
+
+.loginButton{
+  border: none;
+  background-color: #1c5380;
+  color: white;
+  padding: 12px;
+}
+
+.imgHome {
+  width: 30px;
+}
+
+.appImg {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.text-container {
+  
+  box-shadow: 5px 5px 80px rgba(0,0,0,.2);
+  padding: 20px;
+}
+
+
+.list {
+  display: flex;
+  justify-content: space-evenly;
+  width: 50%;
+}
+
+.list > li {
+  align-items: center;
+  list-style: none;
+  color: #06365f;
+}
+
+#container {
+  background-color: white;
+}
+
+#child {
+  background-color: green;
+  background-size: 50% 50%;
+  width: 100%;
+  height: 200%;
+  position: relative;
+  top: 75px;
+}
