--- a/styles/style.css
+++ b/styles/style.css
@@ -113,12 +113,23 @@ p {
   align-content: flex-end;
 }
 
-.links ul{
+ul{
   position: absolute;
+  padding: 12px;
+  width: 100%;
   display: flex;
-  align-items: flex-end;
-  width: 150px;
+  justify-content: center;
+  align-content: flex-end;
+  height: 100%;
   font-size: 0.8em;
   font-weight: 600;
-  color: var(--blue)
+  color: var(--blue);
+  margin-top: 40px;
+}
+
+ul li {
+  display: flex;
+  flex-direction: row;
+  align-self: flex-end;
+  padding: 12px;
 }
