--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,78 @@ Colors to use:
 dark blue: #06365f
 light blue: #1c5380
 */
-
+* {
+  margin: 0;
+  padding: 0;
+  text-decoration: none;
+}
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+background: linear-gradient(to bottom, #3c709b 0%,#1c5380 40%,#ffff 41%,#ffff 100%);
+}
+h1 {
+  font-weight: 800;
+  color: #1c5380
+}
+
+nav {
+  justify-content: center;
+}
+
+
+nav ul a{
+  font-weight: 600;
+}
+
+ul{
+  list-style-type: none; 
+}
+ul li {
+  padding: 2%;
+}
+footer a {
+  color: #3c709b;
+}
+
+.flex {
+  display: flex;
+  /* flex-wrap: wrap; */
+}
+
+#text-card{
+padding-top: 5%;
+padding-bottom: 5%;
+}
+
+.imgbg{
+background: url(../images/frame.png);
+padding: 20px;
+}
+
+.width50{
+  width: 50%;
+}
+
+.btt {
+  padding: 10px;
+  border: 1px solid rgb(0, 0, 0);
+  color: #ffff;
+  font-weight: 600;
+  background: linear-gradient(to bottom, #68a3d3 0%,#2c6597 44%,#06365f 100%);
+}
+
+#header-box {
+      display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.center {
+  
+  align-content: center;
+}
+
+.pad9 {
+  padding: 9%;
 }
