--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,98 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  padding: 0;
+}
+
+body a {
+  text-decoration: none;
+}
+
+.bg {
+  height: 40vh;
+  width: 100%;
+  background-image: url(../images/bgtile.png);
+}
+
+.center {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+article {
+  display: flex;
+}
+
+.sideR {
+  margin-left: 4rem;
+}
+
+.top {
+  display: flex;
+  align-items: center;
+}
+
+.top>a>img {
+  height: 25px;
+}
+
+.btn {
+  margin-left: 5rem;
+  background-color: #476F93;
+  padding: 10px 5px;
+  color: white;
+  font-weight: 400;
+  border-radius: 3px;
+  display: flex;
+  width: 6rem;
+}
+
+.btn img {
+  margin-right: 0.5rem;
+}
+
+.art {
+  background-image: url(../images/frame.png);
+  background-size: 100% 100%;
+  padding: 15px 0 0 40px;
+  border: none;
+  width: 94%;
+}
+
+.art>h1 {
+  font-size: 1.7rem;
+  color: #06365f;
+}
+
+.art>p {
+  width: 90%;
+}
+
+.links {
+  margin-top: 3rem;
+}
+
+footer {
+  display: flex;
+  align-items: center;
+  margin-top: 3rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+footer>nav>a {
+  color: #1c5380;
+  font-size: 13px;
+  padding-right: 1rem;
+}
+
+footer>p {
+  font-size: 13px;
+  margin-left: 1rem;
+  color: rgb(128, 128, 128, 0.8);
 }
