--- a/styles/style.css
+++ b/styles/style.css
@@ -4,7 +4,44 @@ dark blue: #06365f
 light blue: #1c5380
 */
 
+*{
+  margin: 0;
+  border: 0;
+}
+
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  
 }
+
+.flex-container{
+  display: flex;
+  justify-content:center;
+  align-items: center;   
+  
+}
+.container{
+  margin: 100px;
+}
+.container-derecha{
+  margin-left: 50px;
+  width: 400px;
+}
+.container-derecha-arriba{
+  display: flex;
+  align-items: center;
+  
+}
+
+.footer{
+  margin-top: 20px;
+  display: flex;
+  list-style-type: none;
+  justify-content: space-between;
+}
+
+
+
+
+
