--- a/styles/style.css
+++ b/styles/style.css
@@ -7,4 +7,87 @@ light blue: #1c5380
 body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
+  background-image: url("../images/bgtile.png");
+  background-size: 100% 35%;
+  background-repeat: no-repeat;
+
+}
+
+h1 {
+  color: #06365f;
+
+}
+
+#main-wrapper {
+  width: 80%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: flex-start;
+  flex-wrap: wrap;
+  margin: 50px;
+}
+
+#phones {
+  width 35%;
+}
+
+#intro-header {
+  display: flex;
+  align-items: center;
+}
+
+#login {
+  background-image: linear-gradient(#1c5380, #06365f);
+  text-decoration: none;
+  font-size: 10pt;
+  color: white;
+  height: 20px;
+  font-weight: 200;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 75px;
+  margin-left: 20px;
+}
+
+#intro-content {
+  width: 500px;
+  background-image: url("../images/frame.png");
+  background-repeat: no-repeat;
+  background-size: cover;
+  /*align-self: baseline;*/
+}
+
+.intro {
+  width: 90%;
+  padding: 25px;;
+
+}
+
+.download-badges {
+  display: flex;
+  justify-content: space-around;
+}
+
+#footer-menu {
+  width: 50%;
+  margin: 0 auto;
+  list-style: none;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+#footer-menu a {
+  text-decoration: none;
+  color: #06365f;
+  font-size: 10pt;
+  font-weight: bold;
+}
+
+#copyright {
+  color: darkgrey;
+  font-size: 10pt;
+  font-weight: bold;
 }
