--- a/styles/style.css
+++ b/styles/style.css
@@ -8,3 +8,81 @@ body {
   font: 200 16px/1.5 "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin: 0;
 }
+
+
+h2 {
+  color: #06365f;
+  margin: 0px;
+  padding: 10px;
+}
+
+p {
+  margin: 16px;
+}
+
+.container{
+  display: flex;
+  justify-content: center;
+}
+
+.above {
+  background-color: #1c5380;
+  padding: 150px 200px 100px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+
+.log-btn {
+  border: 2px solid #06365f;
+  border-radius: 2px;
+  padding: 10px;
+  background-color: #1c5380;
+}
+
+.log-btn a {
+   text-decoration: none;
+   color: white;
+}
+
+.down{
+  margin: -100px 10% 0px;
+}
+
+.mobiles {
+  padding: 40px;
+  margin-top: -100px;
+}
+
+
+.text {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: relative;
+}
+
+.text h2 {
+  position: absolute;
+  top: 50px;
+  left: 20px;
+}
+.text p {
+  position: absolute;
+  top: 90px;
+  left: 20px;
+}
+
+.badges {
+  position: absolute;
+  bottom: 120px;
+  left: 30px;
+}
+
+.footer {
+  color: #06365f;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 12px;
+}
